--- a/readme.textile
+++ b/readme.textile
@@ -8,10 +8,10 @@ h2. Installation
 
 To install this and use this theme, all you need to do is:
 
-# Install and activate the _glz_custom_fields_ plugin
+# Install and activate the @glz_custom_fields@ plugin
 # Copy the included @default@, @archive@ and @error_default@ pages *over* your current page templates (back up first if you'd like to revert back to them later)
 # Set up the custom fields as set out in the @/screenshots@ image folder
-# Ensure that you have the current *Foundation* folders and files (this download includes the current version - Foundation 3.2.0) installed on your server
+# Ensure that you have the current Foundation folders and files (this download includes the current version - Foundation 3.2.0) installed on your server
 # Ensure you edit the page templates to add your own social links, fonts and a large favicon (64x64px) etc...
 # Use the custom fields as indicated when creating/editing your articles
 
@@ -32,8 +32,10 @@ h2. Theme usage
 The theme is very easy to change should you wish to do so thanks to Foundation. Sites that use this theme (or a customised version) include:
 
 # http://jonathanstubbs.com/
-# http://piapetterson.com
+# http://piapetterson.com/
 
 h2. Questions/comments
 
-If you have any questions or comments, please post in the "Textpattern Support Forum thread":http://forum.textpattern.com/viewtopic.php?id=39368. *Enjoy the theme!*
+If you have any questions or comments, please post in the "Textpattern Support Forum thread":http://forum.textpattern.com/viewtopic.php?id=39368.
+
+*Enjoy the theme!*
